# hyprland-share-picker-gtk4

./: .gitignore  .luarc.json  .rgignore  .stylua.toml  README.md  meson.build
data/: desktop.in.desktop  gschema.in.xml
scripts/: build.sh  luagir.sh  run.sh
scripts/lua/: bundle.lua  luagir.lua
src/: init.in.lua
src/lua/: globals.lua
src/lua/widgets/: appwindow.lua  clients.lua  screens.lua  window.lua
